add Loding gif & search input completed

--- a/src/components/Store.module.css
+++ b/src/components/Store.module.css
@@ -1,6 +1,56 @@
 .container{
     display: flex;
-    justify-content: space-between;
-    margin-top: 150px;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 70px;
+    padding: 0 150px;
+ 
+ }
+.inputContainer{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    margin-top: 100px ;
+}
+.input{
+    height: 20px;
+    width: 300px;
+    border: 1px solid silver;
+    border-radius: 5px;
+    background-color: #f6f6f6;
+    padding: 5px;
+    transition: all 0.2s ease;
+}
+.input:focus{
+    outline: none;
+    border-color: white;
+    background: white;
+    box-shadow: rgba(74, 74, 74, 0.24) 0px 3px 8px;
+}
+.snipper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0b499b;
+}
+
+@media (max-width : 1200px){
+    .container{
+        margin-top: 70px;
+        padding: 15px 80px;
+    }
+}
+
+@media (max-width : 768px){
+    .container{
+        padding: 15px 40px;
+    }
+}
+
+@media (max-width : 555){
+    .container{
+        padding: 15px 10px;
+        justify-content: center;
+    }
 }
