--- a/src/components/shared/Cart.module.css
+++ b/src/components/shared/Cart.module.css
@@ -1,5 +1,89 @@
 .container{
     display: flex;
     justify-content: space-between;
-    margin-top: 180px;
+    align-items: center;
+    border: 1px solid silver;
+    border-radius: 6px;
+    background: #fff;
+    margin-bottom: 20px;
+    margin-top: 100px;
+    padding: 15px;
 }
+.productImage{
+    width: 80px;
+}
+.data{
+    text-align: left;
+}
+.data h3{
+    color: #1a73e8;
+    margin-bottom: 10px;
+
+}
+.data p{
+    color: #34a853;
+    font-weight: bold;
+}
+.quantity{
+    display: inherit;
+    background: orange;
+    width: 25px;
+    height: 25px;
+    line-height:25px ;
+    border: none;
+    border-radius: 3px;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+
+}
+.buttonContainer button{
+    background-color: #1a73e8;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+    font-size: 1.6rem !important;
+    cursor: pointer;
+    line-height: 30px;
+    height: 30px;
+    width: 30px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 4px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+   margin-left: 5px;
+    
+}
+.buttonContainer img {
+    width: 20px;
+  }
+  
+  @media (max-width: 470px) {
+    .container {
+      flex-direction: column;
+    }
+  
+    .productImage {
+      width: 150px;
+    }
+  
+    .data {
+      text-align: center;
+    }
+  
+    .data h3 {
+      margin: 30px 0 20px;
+    }
+  
+    .data p {
+      margin: 20px 0 30px;
+    }
+  
+    .quantity {
+      margin: 0 0 10px;
+    }
+  
+    .buttonContainer {
+      margin: 20px 0 20px;
+    }
+  }
+  
