--- a/src/components/Store.module.css
+++ b/src/components/Store.module.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin-top: 70px;
+    /* margin-top: 70px; */
     padding: 0 150px;
  
  }
