--- a/src/components/Store.module.css
+++ b/src/components/Store.module.css
@@ -1,9 +1,9 @@
+
 .container{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    /* margin-top: 70px; */
     padding: 0 150px;
  
  }
@@ -11,7 +11,7 @@
     display: flex;
     justify-content:center;
     align-items: center;
-    margin-top: 100px ;
+    margin-top: 80px ;
 }
 .input{
     height: 20px;
@@ -21,6 +21,7 @@
     background-color: #f6f6f6;
     padding: 5px;
     transition: all 0.2s ease;
+    margin-bottom: 20px;
 }
 .input:focus{
     outline: none;
